--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primary_color">#1380EC</color>
     <color name="secondary_variant">#CEE3F8</color>
     <color name="cream">#FBFCFE</color>
+    <color name="black">#000000</color>
 </resources>
